syntax = "proto3";
package rashop.mailer.v1;
option go_package = "rashop/proto/gen/go/mailer/v1";

import "mailer/v1/message_query.proto";

service MailerQueryService {
  rpc Get(GetMailsRequest) returns (GetMailsResponse);
  rpc FindByIds(FindMailByIdsRequest) returns (FindMailByIdsResponse);
}
